--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,14 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+::selection {
+  background: rgba(255, 245, 20, 0.8);
+  color: #111;
+}
+::-moz-selection {
+  background: rgba(255, 245, 20, 0.8);
+  color: #111;
+}
 
 html {
   -webkit-font-smoothing: antialiased;
@@ -34,7 +42,7 @@ dl {
 }
 
 li {
-  margin: 0 0 .5rem 0;
+  margin: 0 0 0.5rem 0;
 }
 
 h1,
@@ -103,7 +111,13 @@ table tr:first-child th:last-child {
 }
 
 tbody tr:hover {
-  background: -webkit-gradient(linear, left bottom, right top, from(#f6f6f7), to(#fefefe));
+  background: -webkit-gradient(
+    linear,
+    left bottom,
+    right top,
+    from(#f6f6f7),
+    to(#fefefe)
+  );
   background: linear-gradient(to top right, #f6f6f7, #fefefe);
 }
 
@@ -127,7 +141,8 @@ tbody > tr:last-child > td {
 }
 
 /* Containers */
-.container, .small-container {
+.container,
+.small-container {
   max-width: 1050px;
   padding: 0 1rem;
   margin-left: auto;
@@ -139,7 +154,8 @@ tbody > tr:last-child > td {
 }
 
 @media screen and (min-width: 650px) {
-  .container, .small-container,
+  .container,
+  .small-container,
   .small-container {
     padding: 0 2rem;
   }
@@ -148,8 +164,14 @@ tbody > tr:last-child > td {
 /* Hero */
 .site-hero {
   margin-top: 60px;
-  background: -webkit-gradient(linear, left top, right bottom, from(#292C33), to(#393d47));
-  background: linear-gradient(to bottom right, #292C33, #393d47);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right bottom,
+    from(#292c33),
+    to(#393d47)
+  );
+  background: linear-gradient(to bottom right, #292c33, #393d47);
   text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -234,7 +256,7 @@ tbody > tr:last-child > td {
   border-radius: 6px;
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  margin: .5rem;
+  margin: 0.5rem;
 }
 
 .card:hover {
@@ -389,7 +411,7 @@ tbody > tr:last-child > td {
 .site-footer {
   text-align: center;
   padding: 2rem 0;
-  background: #292C33;
+  background: #292c33;
   color: #bec6d5;
 }
 
@@ -498,7 +520,7 @@ tbody > tr:last-child > td {
 
 .nav-menu a {
   display: block;
-  padding: .5rem 2rem;
+  padding: 0.5rem 2rem;
   color: #fff;
 }
 
@@ -557,15 +579,27 @@ tbody > tr:last-child > td {
 }
 
 a.button,
-[type=button],
-[type=submit],
+[type="button"],
+[type="submit"],
 button {
   display: inline-block;
   -webkit-appearance: none;
   -webkit-transition: background 500ms ease;
   transition: background 500ms ease;
-  background-image: -webkit-gradient(linear, left top, right top, from(#45bafc), color-stop(51%, #57EEA1), to(#45bafc));
-  background-image: linear-gradient(to right, #45bafc 0%, #57EEA1 51%, #45bafc 100%);
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#45bafc),
+    color-stop(51%, #57eea1),
+    to(#45bafc)
+  );
+  background-image: linear-gradient(
+    to right,
+    #45bafc 0%,
+    #57eea1 51%,
+    #45bafc 100%
+  );
   background-size: 300% auto;
   color: white;
   border: none;
@@ -581,8 +615,8 @@ button {
 }
 
 a.button:hover,
-[type=button]:hover,
-[type=submit]:hover,
+[type="button"]:hover,
+[type="submit"]:hover,
 button:hover {
   text-decoration: none;
   background-position: right center;
@@ -592,26 +626,46 @@ button:hover {
 a.button-secondary {
   color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(255, 255, 255, 0.2);
-  background: -webkit-gradient(linear, left bottom, right top, from(rgba(255, 255, 255, 0.01)), to(rgba(255, 255, 255, 0.05)));
-  background: linear-gradient(to top right, rgba(255, 255, 255, 0.01), rgba(255, 255, 255, 0.05));
+  background: -webkit-gradient(
+    linear,
+    left bottom,
+    right top,
+    from(rgba(255, 255, 255, 0.01)),
+    to(rgba(255, 255, 255, 0.05))
+  );
+  background: linear-gradient(
+    to top right,
+    rgba(255, 255, 255, 0.01),
+    rgba(255, 255, 255, 0.05)
+  );
 }
 
 .button-secondary:hover,
 a.button-secondary:hover {
   color: #fff;
   border: 1px solid rgba(255, 255, 255, 0.3);
-  background: -webkit-gradient(linear, right top, left bottom, from(rgba(255, 255, 255, 0.03)), to(rgba(255, 255, 255, 0.07)));
-  background: linear-gradient(to bottom left, rgba(255, 255, 255, 0.03), rgba(255, 255, 255, 0.07));
+  background: -webkit-gradient(
+    linear,
+    right top,
+    left bottom,
+    from(rgba(255, 255, 255, 0.03)),
+    to(rgba(255, 255, 255, 0.07))
+  );
+  background: linear-gradient(
+    to bottom left,
+    rgba(255, 255, 255, 0.03),
+    rgba(255, 255, 255, 0.07)
+  );
 }
 
 label {
   display: block;
   font-weight: 700;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
-[type=text],
-[type=email],
+[type="text"],
+[type="email"],
 textarea {
   width: 100%;
   display: block;
@@ -624,14 +678,14 @@ textarea {
   margin-bottom: 1rem;
 }
 
-[type=text]:hover,
-[type=email]:hover,
+[type="text"]:hover,
+[type="email"]:hover,
 textarea:hover {
   border: 1px solid #c4c7c7;
 }
 
-[type=text]:focus,
-[type=email]:focus,
+[type="text"]:focus,
+[type="email"]:focus,
 textarea:focus {
   outline: 0;
   border: 1px solid #45bafc;
@@ -650,11 +704,17 @@ textarea:focus {
 }
 
 .secondary {
-  color: #57EEA1;
+  color: #57eea1;
 }
 
 .alt-bg {
-  background: -webkit-gradient(linear, left bottom, right top, from(#f6f6f7), to(#fefefe));
+  background: -webkit-gradient(
+    linear,
+    left bottom,
+    right top,
+    from(#f6f6f7),
+    to(#fefefe)
+  );
   background: linear-gradient(to top right, #f6f6f7, #fefefe);
 }
 
@@ -662,8 +722,14 @@ textarea:focus {
   display: inline-block;
   -webkit-transition: all 100ms linear;
   transition: all 100ms linear;
-  background: -webkit-gradient(linear, left top, right top, from(#45bafc), to(#57EEA1));
-  background: linear-gradient(to right, #45bafc 0%, #57EEA1 100%);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#45bafc),
+    to(#57eea1)
+  );
+  background: linear-gradient(to right, #45bafc 0%, #57eea1 100%);
   background-size: 0px 6px;
   background-repeat: no-repeat;
   background-position: left 95%;
@@ -679,7 +745,7 @@ textarea:focus {
 
 .social-icons a {
   color: #fff;
-  margin: 0 .5rem;
+  margin: 0 0.5rem;
 }
 
 .social-icons a:hover {
